250829_1422 프론트 레이아웃 마무리
1. 사이드 메뉴 내부 div와 선이 일치하지 않는 증상 수정
2. index 내의 사이드메뉴랑 콘텐츠 영역의 정렬이 올바르지 못한 증상 수정
3. 콘텐츠 영역의 제목과 내용 영역 분리

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -11,15 +11,25 @@ li {
 a {
     text-decoration: none;
     color: black;
-    font-size: 1.2rem;
-    font-weight: 600;
 }
 
-#indexBody {
-    align-items: center;
-}
-
-.container{
-    display: flex;
+.indexContainer{
+    margin: 0.5rem auto;
     max-width: 1280px;
+}
+
+.mainContent {
+    padding: 0.5rem;
+}
+
+.ContentBox {
+    border: 0.25rem solid #eeeeee;
+    border-radius: 1.25rem;
+    padding: 1rem;
+}
+
+.title1{
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
 }
