--- a/src/main/resources/static/css/sideMenu.css
+++ b/src/main/resources/static/css/sideMenu.css
@@ -15,22 +15,18 @@ a {
     font-weight: 600;
 }
 
-body {
+#sideBody {
     display: flex;
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
 }
 
-#sideMenuContainer {
-    max-width: 250px;
-    min-width: 200px;
-}
-
 .sideMenu {
     border-bottom: solid 0.2rem #D9D9D9;
     border-top: solid 0.2rem #D9D9D9;
     padding: 0;
+    width: 12.5rem;
 }
 
 .menuHead {
