--- a/src/main/resources/static/css/template/roleTem.css
+++ b/src/main/resources/static/css/template/roleTem.css
@@ -23,13 +23,18 @@ a {
 }
 
 .ContentBox {
-    border: 0.25rem solid #eeeeee;
+    border: 0.12rem solid #efefef;
     border-radius: 1.25rem;
     padding: 1rem;
 }
 
 .title1{
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 0.5rem;
+}
+
+.contentHeader{
+    display: flex;
+    justify-content: space-between;
 }
