250831_2253 roleTem 화면 구현
1. table 구현
2. 모달 구현
3. summerNote 구현
4. BootStrap 구현

--- a/src/main/resources/static/css/template/roleTem.css
+++ b/src/main/resources/static/css/template/roleTem.css
@@ -38,3 +38,9 @@ a {
     display: flex;
     justify-content: space-between;
 }
+
+.roleTemplateThead th,
+.roleTemplateTbody td {
+    text-align: center;
+    vertical-align: middle;
+}
