--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,9 +1,16 @@
+.noto-sans-kr {
+    font-family: "Noto Sans KR", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
 * {
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    font-family: "Noto Sans KR", sans-serif;
 }
-
+    
 li {
     list-style-type: none;
 }
@@ -13,7 +20,7 @@ a {
     color: black;
 }
 
-.indexContainer{
+.indexContainer {
     margin: 0.5rem auto;
     max-width: 1280px;
 }
@@ -28,7 +35,7 @@ a {
     padding: 1rem;
 }
 
-.title1{
+.title1 {
     font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 0.5rem;
