--- a/src/main/resources/static/css/template/roleTem.css
+++ b/src/main/resources/static/css/template/roleTem.css
@@ -1,7 +1,14 @@
+.noto-sans-kr {
+  font-family: "Noto Sans KR", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
 * {
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    font-family: "Noto Sans KR", sans-serif;
 }
 
 li {
