250901_1809 RTI 상단 제목 기능 수정

--- a/src/main/resources/static/css/template/roleTemItem.css
+++ b/src/main/resources/static/css/template/roleTemItem.css
@@ -52,8 +52,8 @@ a {
 }
 
 /* 테이블 내 요소 중앙정렬 */
-.roleTemplateThead th,
-.roleTemplateTbody td {
+.RTIThead th,
+.RTITbody td {
     text-align: center;
     vertical-align: middle;
 }
