250905_1229 비로그인 시 템플릿 table 내에 문구 발생하도록 JS 수정

--- a/src/main/resources/static/css/template/roleTem.css
+++ b/src/main/resources/static/css/template/roleTem.css
@@ -64,3 +64,8 @@ a {
     font-size: 1.12rem;
     font-weight: 600;
 }
+
+.roleTemplateTbody a {
+    font-size: 1.12rem;
+    font-weight: 600;
+}
