--- a/src/main/resources/static/css/template/checkTem.css
+++ b/src/main/resources/static/css/template/checkTem.css
@@ -1,8 +1,8 @@
 /* 글꼴 noto sans import */
 .noto-sans-kr {
-  font-family: "Noto Sans KR", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
+    font-family: "Noto Sans KR", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 * {
@@ -22,7 +22,7 @@ a {
     color: black;
 }
 
-.indexContainer{
+.indexContainer {
     margin: 0.5rem auto;
     max-width: 1280px;
 }
@@ -39,7 +39,7 @@ a {
 }
 
 /* 상단 제목 */
-.title1{
+.title1 {
     font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 0.7rem;
@@ -47,7 +47,7 @@ a {
 }
 
 /* 상단 제목과 버튼을 양쪽 끝으로 배치 */
-.contentHeader{
+.contentHeader {
     display: flex;
     justify-content: space-between;
 }
@@ -61,6 +61,11 @@ a {
 
 /* 모달 내 소제목 */
 .modalMiddleTitle {
+    font-size: 1.12rem;
+    font-weight: 600;
+}
+
+.checkTemplateTbody a {
     font-size: 1.12rem;
     font-weight: 600;
 }
