250905_1716 header logo a태그 추가

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -20,9 +20,8 @@
     align-items: center;
 }
 
-.logo {
-    min-height: 100px;
-    max-height: 110px;
+.logoImg {
+    max-height: 50px;
     object-fit: cover;
     font-weight: bold;
 }
