--- a/src/main/resources/static/css/project/navigation.css
+++ b/src/main/resources/static/css/project/navigation.css
@@ -2,7 +2,7 @@
     background-color: #2f4673;
     color: white;
     width: 18%;
-    height: 3rem;
+    padding : 0.6rem 0;
     text-align: center;
     font-weight: bold;
 }
