250908_2258 performCheck 프론트 완성 + 엑셀 다운로드 기능 구성

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -56,3 +56,10 @@ a {
     align-items: center;
     margin: 0.5rem 0;
 }
+
+/* 테이블 내 요소 중앙정렬 */
+.table th,
+.table td {
+    text-align: center;
+    vertical-align: middle;
+}
