--- a/src/main/resources/static/css/chat/chat.css
+++ b/src/main/resources/static/css/chat/chat.css
@@ -12,7 +12,6 @@
 .chat-list {
     background-color: #f1f1f1;
     border-right: 1px solid #ccc;
-    padding: 1rem;
     overflow-y: auto;
 }
 
@@ -20,11 +19,10 @@
     display: flex;
     flex-direction: column;
     background-color: #fff;
+    max-height: 50rem; /* 800px */
 }
 
 .chat-header {
-    background-color: #0d6efd;
-    color: white;
     padding: 1rem;
     font-weight: bold;
 }
@@ -33,6 +31,10 @@
     flex-grow: 1;
     padding: 1rem;
     overflow-y: auto;
+    height: 50rem; /* 800px */
+    overflow-y: scroll;
+    padding: 1rem;
+    flex-grow: 0; /* 고정 높이로 설정 */
 }
 
 .chat-input {
@@ -51,4 +53,16 @@
         width: 100%;
         height: 400px;
     }
+}
+
+/* 세로 800px 초과시 스크롤 생성 */
+.chat-list{
+    max-height: 50rem; /* 800px */
+    overflow-y: scroll;
+}
+
+/* 스크롤은 유지되지만 스크롤바는 숨김 */
+.chat-list::-webkit-scrollbar,
+.chat-messages::-webkit-scrollbar {
+    display: none;
 }
