--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,3 +1,5 @@
+@import url('common.css');
+
 .noto-sans-kr {
     font-family: "Noto Sans KR", sans-serif;
     font-optical-sizing: auto;
@@ -30,7 +32,8 @@ a {
 }
 
 .ContentBox {
-    border: 0.12rem solid #efefef;
+    background-color: #ffffff;
+    border: 0.12rem solid #ffffff;
     border-radius: 1.25rem;
     padding: 1rem;
 }
@@ -66,7 +69,14 @@ a {
     vertical-align: middle;
 }
 
-/* 최동진 index.jsp 히어로 섹션 */
+/* performcheck.jsp 근무시간 칸 너비 조정 */
+#detailPerform .d-flex > .form-control {
+    flex: 1 1 50%;
+}
+
+#detailPerform .d-flex > .form-label {
+    flex: 0 0 120px;
+}
 .hero-section {
     position: relative;
     height: 100vh;
@@ -82,6 +92,7 @@ a {
     color: white;
     text-align: center;
     overflow: hidden;
+    margin-bottom: 0;
 }
 
 /* 배경 이미지 */
