--- a/src/main/resources/static/css/project/list.css
+++ b/src/main/resources/static/css/project/list.css
@@ -1,57 +1,13 @@
-/* 글꼴 noto sans import */
-.noto-sans-kr {
-  font-family: "Noto Sans KR", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-}
+@import url('../common.css');
 
-* {
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
-    /* 전체 글꼴 Noto Sans로 지정  */
-    font-family: "Noto Sans KR", sans-serif;
-}
-
-li {
-    list-style-type: none;
-}
-
-a {
-    text-decoration: none;
-    color: black;
-}
-
-.indexContainer{
-    margin: 0.5rem auto;
-    max-width: 1280px;
-}
-
-/* 상단 제목 */
-.title1{
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 0.7rem;
-    margin-left: 0.75rem;
-}
-
-/* 상단 제목과 버튼을 양쪽 끝으로 배치 */
 .titleArea {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-/* 테이블 내 요소 중앙정렬 */
 .pjListHead th,
 .pjListTbody td {
     text-align: center;
     vertical-align: middle;
-}
-
-/* Content 구역 얇은 회색 선 */
-.ContentBox {
-    border: 0.12rem solid #efefef;
-    border-radius: 1.25rem;
-    padding: 1rem;
 }
