--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -5,7 +5,7 @@
 body {
     font-family: 'Noto Sans KR', sans-serif;
     color: #333;
-    background-color: #f8f9fa;
+    background-color: #ffffff;
     display: flex;
     flex-direction: column;
     min-height: 50vh;
